display prints now. woohoo! now keep going.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
             <!-- <button name="clear" type="reset" value="Reset">C</button> -->
             <button name="clear" id="clear" value=" "> C </button>
-            <div class="results" name="results"></div>
+            <output class="results" name="results"></output>
             <button class="num" type="button" value="7" id="b7"> 7 </button>
             <button class="num" type="button" value="8" id="b8"> 8 </button>
             <button class="num" type="button" value="9" id="b9"> 9 </button>
