--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="num" type="button" value="3" id="b3"> 3 </button>
             <button class="op" type="button" value="-" id="bsub"> - </button>
             <button class="num" type="button" value="0" id="b0"> 0 </button>
-            <button class="dec" type="button" value="." id="bdec"> . </button>
+            <button type="button" value="." id="bdec"> . </button>
             <button class="equal" type="button" value="=" id="bcalc"> = </button>
             <button class="op" type="button" value="+" id="bsum"> + </button>
          <!-- <button class="button" type="button" value= % id="b1"> M </button>
