--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <button type="button" value="." id="bdec"> . </button>
             <button class="equal" type="button" value="=" id="bcalc"> = </button>
             <button class="op" type="button" value="+" id="bsum"> + </button>
-         <!-- <button class="button" type="button" value= % id="b1"> M </button>
-         <button class="button" type="button" value= sqrt id="b1"> e </button>
-         <div class="filler-logo"></div> -->
+            <button type="button" value="%" id="bmod"> MOD </button>
+            <button type="button" value="SQR" id="bsqr"> SQR </button>
+            <div type="filler" id="filler"></div>
         </form>
       <!-- </div> -->
       <script type="text/javascript" src="main.js"></script>
