--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="op" type="button" value="+" id="bsum"> + </button>
             <button type="button" value="%" id="bmod"> MOD </button>
             <button type="button" value="SQR" id="bsqr"> SQR </button>
-            <div type="filler" id="filler"></div>
+            <button type="button" id="filler">MATH</button>
         </form>
       <!-- </div> -->
       <script type="text/javascript" src="main.js"></script>
